<resources>
    <string name="app_name">341_App</string>
    <string name="loginText">Log In</string>
    <string name="passwordHint">Password</string>
    <string name="userNameHint">Email</string>
    <string name="ToSignInTxt">Need an account?</string>
    <string name="loginBtnTxt">Login</string>
    <string name="guestBtnTxt">Continue as Guest</string>
    <string name="regTxt">Sign Up</string>
    <string name="ToLoginTxt">Already have an Account?</string>
    <string name="SignUpTxt">Sign Up</string>
    <string name="profileTxt">Set your Profile Name</string>
    <string name="saveBtnTxt">Save</string>
    <string name="logoutTxt">Logout</string>
    <string name="showtxt">Show</string>
    <string name="hidetxt">Hide</string>

    <string name="createTxt">Create an Event</string>
    <string name="nameTxt">Event Name</string>
    <string name="programTxt">Event Program</string>
    <string name="dateTxt">Date</string>
    <string name="timeTxt">0:00 - 0:00PM</string>
    <string name="descriptionTxt">Description</string>
    <string name="createBtnTxt">Create</string>
    <string name="cancelBtnTxt">Cancel</string>

    <string name="deleteTxt">Delete Event</string>
    <string name="donateAmountTxt">Enter donation amount</string>
    <string name="donateTxt">Donate</string>
    <string name="volunteerTxt">Volunteer</string>

    <string name="card_name">Full name on card</string>
    <string name="card_number">Card Number</string>
    <string name="card_CVV">CVV</string>
    <string name="billing_address">Street Address</string>
    <string name="city">City</string>
    <string name="state">Full State name</string>
    <string name="apartment">Apartment</string>
    <string name="SelectDate">Select Date</string>
    <string name="startTime">Start</string>
    <string name="stopTime">End</string>

    <string name="analytics">Analytics</string>
    <string name="totalTxt">Total Funds Raised: $</string>
    <string name="curtotalTxt">Current Funds Raised: $</string>
    <string name="numAdminTxt">Number of Admin Accounts: </string>
    <string name="numDonTxt">Number of Donor Accounts: </string>
    <string name="numVolTxt">Number of Volunteer Accounts: </string>
    <string name="eventsTxt">Total Number Events Held: </string>

    <string name="accountDetailsTxt">Admin Account Details</string>


    <string-array name="country_arrays">
        <item>Admin</item>
        <item>Donor</item>
        <item>Volunteer</item>
    </string-array>

</resources>

