<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrgAnalyticsActivity">

    <TextView
        android:id="@+id/analyticsTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/analytics"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/totalTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/totalTxt"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/analyticsTxt" />


    <TextView
        android:id="@+id/curTotTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/curtotalTxt"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalTxt" />

    <TextView
        android:id="@+id/totTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/totalTxt"
        app:layout_constraintTop_toTopOf="@+id/totalTxt" />

    <TextView
        android:id="@+id/curTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/curTotTxt"
        app:layout_constraintTop_toTopOf="@+id/curTotTxt" />


    <TextView
        android:id="@+id/numEventsTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/curtotalEventsTxt"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/curTotTxt" />

    <TextView
        android:id="@+id/eventTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="0"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/numEventsTxt"
        app:layout_constraintTop_toTopOf="@+id/numEventsTxt" />

    <TextView
        android:id="@+id/totNumEventsTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/eventsTxt"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numEventsTxt" />

    <TextView
        android:id="@+id/totNEventsTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="0"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/numEventsTxt"
        app:layout_constraintTop_toTopOf="@+id/totNumEventsTxt" />

</androidx.constraintlayout.widget.ConstraintLayout>